# CuRefreshRateTuner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  config.json
magisk/: CuRefreshRateTuner  config.json  customize.sh  module.prop  service.sh  uninstall.sh
src/: CuRefreshRateTuner.cpp  CuRefreshRateTuner.h  main.cpp
src/modules/: cgroup_watcher.cpp  cgroup_watcher.h  input_listener.cpp  input_listener.h  refresh_rate_tuner.cpp  refresh_rate_tuner.h  topapp_monitor.cpp  topapp_monitor.h
src/platform/: file_watcher.h  module.h  singleton.h  timer.h  worker_thread.h
src/utils/: CuEventTransfer.h  CuFile.h  CuFormat.h  CuJSONObject.cpp  CuJSONObject.h  CuLogger.h  CuPairList.h  CuQueue.h  CuSafeVal.h  CuSched.h  CuStringMatcher.h  CuTimer.h  android_platform.h  cu_sched.h  libcu.h
